dnl
dnl configure file for brdg
dnl
dnl Copright (c) 2010  Kazuyoshi Aizawa <admin2@whiteboard.ne.jp>  
dnl
AC_INIT
AC_PROG_CC
AC_CHECK_PROG(ISAINFO, isainfo, yes, not found. assuming 32bit, /usr/bin)
if test "$ISAINFO" = "yes" ;
then
    KARCH=`/usr/bin/isainfo -k`
else
    KARCH=`uname -p`
fi
IS_GNU_LD=`ld --version 2>&1 | grep  GNU`
if test "$GCC" = yes; then
        CFLAGS="$CFLAGS -Wall"
fi

AC_CHECK_PROG(UNAME, uname, yes, not found, /usr/bin)
AC_CHECK_PROG(CUT, cut, yes, not found, /usr/bin)
if test "$UNAME" = "yes" -a "$CUT" = "yes" ; 
then 
    VERSION=`/usr/bin/uname -r`
    MAJOR_VERSION=`echo "$VERSION" |/usr/bin/cut -f 1 -d .`
    MINOR_VERSION=`echo "$VERSION" |/usr/bin/cut -f 2 -d .`
else
    exit
fi

case $KARCH in
     'sparc' | 'i386')
	DRV_PATH="/kernel/drv"
	MOD_PATH="/kernel/strmod"
        ;;
      'sparcv9')
        KCFLAGS="$KCFLAGS -m64"
	DRV_PATH="/kernel/drv/sparcv9"
	MOD_PATH="/kernel/strmod/sparcv9"
        if test -n "$IS_GNU_LD";
        then
                LD_OPT="-melf64_sparc"
        fi
        ;;
      'amd64')
	if test "$GCC" = yes; then
            KCFLAGS="$KCFLAGS -m64 -mcmodel=kernel -mno-red-zone"
        else
            KCFLAGS="$KCFLAGS -m64 -xmodel=kernel"
        fi
	DRV_PATH="/kernel/drv/amd64"
	MOD_PATH="/kernel/strmod/amd64"
        if test -n "$IS_GNU_LD";
        then
                LD_OPT="-melf_x86_64"
        fi
        ;;
esac

if test $MINOR_VERSION -gt 9 ; then
	KCFLAGS="$KCFLAGS -DSOL10"
fi
	

AC_ARG_ENABLE(debug,[  --enable-debug         Enable Debuging])
if test "$enable_debug" = "yes"; then
  CFLAGS="$CFLAGS -DDEBUG"
  KCFLAGS="$KCFLAGS -DDEBUG"
fi
AC_SUBST(CC)
AC_SUBST(KCFLAGS)
AC_SUBST(DRV_PATH)
AC_SUBST(MOD_PATH)
AC_SUBST(CFLAGS)
AC_SUBST(LD_OPT)
AC_OUTPUT(Makefile)
